Modificato definizione di "Impianto luminoso"

--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -16,7 +16,7 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{0.0.0}{24/03/2023}{Soldà Matteo}{Cavaliere Erica}{Prima stesura.}
 \addversione{0.0.1}{03/05/2023}{Nicolas Alberti}{Soldà Matteo}{Aggiunta parole al glossario, lettera T.}
 \addversione{0.0.2}{10/05/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunti nuovi vocaboli derivanti da \textit{Motivazione delle Scelte} e anche da \textit{Norme di Progetto}}
-\addversione{0.0.3}{30/05/2023}{Cavaliere Erica}{ }{Aggiunti nuovi vocaboli derivanti dall'\textit{Analisi dei requisiti}}
+\addversione{0.0.3}{30/05/2023}{Cavaliere Erica}{Alberti Nicolas}{Aggiunti nuovi vocaboli derivanti dall'\textit{Analisi dei requisiti}}
 
 \begin{document}
 \makeindexdetails
@@ -61,7 +61,7 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 
 \section{I.}
 \textbf{IoT}: \textit{Internet of Things}, descrive la rete di oggetti fisici che hanno sensori, software e altre tecnologie integrate allo scopo di connettere e scambiare dati con altri dispositivi e sistemi tramite internet. \\ \\
-\textbf{Impianto luminoso:} la struttura di un lampione. \\ \\
+\textbf{Impianto luminoso:} elemento composto da una fonte luminosa. \\ \\
 \textbf{Implementazione:} realizzazione concreta di una procedura a partire dalla sua definizione logica. \\ \\
 \textbf{Intensità luminosa:} quantità di luce prodotta da un \textit{impianto luminoso\textsubscript{G}}. \\ \\
 \textbf{Interfaccia:} dispositivo di collegamento con cui un software assicura la comunicazione tra due sistemi altrimenti incompatibili, oppure tra unità centrali e periferiche. \\ \\
