--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -138,7 +138,7 @@ completamento del progetto:
 
 \subsection{Diagramma dei casi d'uso}
 
-\includegraphics[scale=0.7]{diagramma_use_case_1.png}
+\includegraphics[scale=0.7]{diagramma_use_case_1.PNG}
 
 \includegraphics[scale=0.65]{diagramma_use_case_2.png}
 
