--- a/docs/interni/verbali/2023_05_29_I/2023_05_29_I.tex
+++ b/docs/interni/verbali/2023_05_29_I/2023_05_29_I.tex
@@ -37,23 +37,23 @@
 \begin{itemize}
     \item Resoconto Sprint Precedente
     \item Decisione Compiti e Suddivisione
-    \item Modifiche all'Analisi dei Requisiti
-    \item Analisi e Revisione Collettiva del PoC
+    \item Modifiche all'\textit{Analisi dei Requisiti}
+    \item Analisi e Revisione Collettiva del \textit{PoC}
     \item Modifiche al Diario di Bordo
     \item Varie ed Eventuali
 \end{itemize}
 
 \section*{Conclusioni}
-Durante la riunione sono state discusse le modifiche da apportare all'Analisi dei Requisiti, approvando il lavoro svolto dai vari membri. È stata effettuata una suddivisione dei compiti per completare lo sprint corrente. È stata inoltre svolta un'analisi e revisione collettiva del PoC.\\
-È stato concordato di completare il diario di bordo entro venerdì, includendo le note riguardanti la revisione di Cardin e le nuove issue per terminare lo sprint. È stata inoltre ridefinita la timeline del diario di bordo.
+Durante la riunione sono state discusse le modifiche da apportare all'\textit{Analisi dei Requisiti}, approvando il lavoro svolto dai vari membri. È stata effettuata una suddivisione dei compiti per completare lo sprint corrente. È stata inoltre svolta un'analisi e revisione collettiva del \textit{PoC}.\\
+È stato concordato di completare il diario di bordo entro venerdì, includendo le note riguardanti la revisione del Prof. Cardin e le nuove issue per terminare lo sprint. È stata inoltre ridefinita la timeline del diario di bordo.
 
 \section*{Impegni Assunti}
 \begin{itemize}
     \item Erica si occuperà del glossario delle parole nuove.
-    \item Romina si occuperà di modificare l'Analisi dei Requisiti (controllare gli include e aggiungere screenshot) e di aggiornare il Piano di Progetto con l'ultimo sprint.
+    \item Romina si occuperà di modificare l'\textit{Analisi dei Requisiti} (controllare gli include e aggiungere screenshot) e di aggiornare il \textit{Piano di Progetto} con l'ultimo sprint.
     \item Francesco si occuperà di redigere il verbale esterno con le indicazioni fornite dal Prof. Cardin.
     \item Lorenzo si occuperà di redigere il verbale interno.
-    \item Matteo e Nicolas si occuperanno di avanzare con il PoC.
+    \item Matteo e Nicolas si occuperanno di avanzare con il \textit{PoC}.
 \end{itemize}
 
 \end{document}
