--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -26,6 +26,7 @@ Questo documento si occupa di riportare un'analisi di tutti gli elementi richies
 \addversione{0.0.3}{09/05/2023}{Brotto Romina}{Soldà Matteo}{Aggiunta sezioni 2, 2.1, 4, 4.1 ed inizio stesura requisiti funzionali}
 \addversione{0.0.4}{10/05/2023}{Alberti Nicolas}{Brotto Romina}{Aggiunta Tabella Requisiti funzionali}
 \addversione{0.0.5}{25/05/2023}{Brotto Romina}{Cavaliere Erica}{Sistemazione casi d'uso, aggiunta sottocasi e requisiti funzionali}
+\addversione{0.0.6}{01/06/2023}{Brotto Romina}{}{Aggiunti sottocasi da 11.1.1 al 11.1.5 con relativi requisiti funzionali e correzione immagini use case}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -445,6 +446,81 @@ completamento del progetto:
 \end{enumerate}
 \textbf{Requisiti collegati:} RF17-O\newline
 
+\subsubsection{UC11.1.1 - Specifica di interazione automatica (push)}
+\textbf{Attore:} Amministratore.\newline
+\textbf{PRE:} il sensore inserito non specifica il tipo di interazione con il sistema.\newline
+\textbf{POST:} il sensore inserito possiede come dettaglio il tipo di interazione automatico con il sistema.\newline
+\textbf{Scenario principale:}
+\begin{enumerate}
+    \item L'amministratore accede al sistema;
+    \item L'amministratore effettua il login con proprie credenziali;
+    \item L'amministratore avvia procedura inserimento;
+    \item L'amministratore specifica tipo di interazione push (automatica);
+    \item L'amministratore specifica l'area illuminata di riferimento;
+    \item Viene ottenuta la conferma dell'inserimento.
+\end{enumerate}
+\textbf{Requisiti collegati:} RF37-F\newline
+
+\subsubsection{UC11.1.2 - Specifica di interazione su richesta (pull)}
+\textbf{Attore:} Amministratore.\newline
+\textbf{PRE:} il sensore inserito non specifica il tipo di interazione con il sistema.\newline
+\textbf{POST:} il sensore inserito possiede come dettaglio il tipo di interazione su richiesta con il sistema.\newline
+\textbf{Scenario principale:}
+\begin{enumerate}
+    \item L'amministratore accede al sistema;
+    \item L'amministratore effettua il login con proprie credenziali;
+    \item L'amministratore avvia procedura inserimento;
+    \item L'amministratore specifica tipo di interazione pull (su richiesta);
+    \item L'amministratore specifica l'area illuminata di riferimento;
+    \item Viene ottenuta la conferma dell'inserimento.
+\end{enumerate}
+\textbf{Requisiti collegati:} RF38-F\newline
+
+\subsubsection{UC11.1.3 - Specifica dettagli del sensore}
+\textbf{Attore:} Amministratore.\newline
+\textbf{PRE:} il sensore inserito non specifica alcun tipo di dettaglio.\newline
+\textbf{POST:} il sensore inserito possiede i dettagli riguardanti le caratteristiche del sensore.\newline
+\textbf{Scenario principale:}
+\begin{enumerate}
+    \item L'amministratore accede al sistema;
+    \item L'amministratore effettua il login con proprie credenziali;
+    \item L'amministratore avvia procedura inserimento;
+    \item L'amministratore specifica i dettagli del sensore (che possono essere indirizzo IP, polling time, protocollo);
+    \item L'amministratore specifica l'area illuminata di riferimento;
+    \item Viene ottenuta la conferma dell'inserimento.
+\end{enumerate}
+\textbf{Requisiti collegati:} RF39-O\newline
+
+\subsubsection{UC11.1.4 - Specifica di posizione geografica del sensore}
+\textbf{Attore:} Amministratore.\newline
+\textbf{PRE:} il sensore inserito non specifica la posizione geografica in cui si trova.\newline
+\textbf{POST:} il sensore inserito possiede i dettagli riguardanti la sua localizzazione geografica.\newline
+\textbf{Scenario principale:}
+\begin{enumerate}
+    \item L'amministratore accede al sistema;
+    \item L'amministratore effettua il login con proprie credenziali;
+    \item L'amministratore avvia procedura inserimento;
+    \item L'amministratore specifica la localizzazione del sensore;
+    \item L'amministratore specifica l'area illuminata di riferimento;
+    \item Viene ottenuta la conferma dell'inserimento.
+\end{enumerate}
+\textbf{Requisiti collegati:} RF40-O\newline
+
+\subsubsection{UC11.1.5 - Specifica raggio d'azione}
+\textbf{Attore:} Amministratore.\newline
+\textbf{PRE:} il sensore inserito non specifica l'ampiezza del raggio d'azione del sensore.\newline
+\textbf{POST:} il sensore inserito possiede i dettagli riguardanti la portata del raggio d'azione.\newline
+\textbf{Scenario principale:}
+\begin{enumerate}
+    \item L'amministratore accede al sistema;
+    \item L'amministratore effettua il login con proprie credenziali;
+    \item L'amministratore avvia procedura inserimento;
+    \item L'amministratore specifica l'ampiezza del raggio d'azione;
+    \item L'amministratore specifica l'area illuminata di riferimento;
+    \item Viene ottenuta la conferma dell'inserimento.
+\end{enumerate}
+\textbf{Requisiti collegati:} RF41-O\newline
+
 \subsubsection{UC11.2 - Rimozione di un sensore}
 \textbf{Attore:} Amministratore.\newline
 \textbf{PRE:} il sensore è configurato per essere parte del sistema gestito dall'applicazione.\newline
@@ -809,6 +885,22 @@ Ogni requisito è identificato da un codice la cui struttura è definita nelle \
     RF35-F & Il sistema rileva la presenza di un guasto o un'anomalia rguardo una misurazione errata. & Facoltativo & UC21\\
     \hline
     RF36-F & Il sistema provvede ad inserire nella lista di impianti guasti l'area in cui è presente l'anomalia. & Facoltativo & UC22\\    
+    \hline
+    RF37-F & Durante l'inserimento di un nuovo sensore si specifica il tipo di interazione automatico (push) con il sistema. & Facoltativo & UC11.1.1\\
+    \hline
+    RF38-F & Durante l'inserimento di un nuovo sensore si specifica il tipo di interazione su richiesta (pull) con il sistema. & Facoltativo & UC11.1.2\\
+    \hline
+    RF39-O & Durante l'inserimento di un nuovo sensore si specificano i dettagli relativi a tale sensore. & Obbligatorio & UC11.1.3\\
+    \hline
+    RF40-O & Durante l'inserimento di un nuovo sensore si specifica la posizione geografica del sensore di riferimento. & Obbligatorio & UC11.1.4\\
+    \hline
+    RF41-O & Durante l'inserimento di un nuovo sensore si specifica l'ampiezza del raggio d'azione del sensore che si sta aggiungendo. & Obbligatorio & UC11.1.5\\
+
+
+    
+    
+    
+    
     \bottomrule
 \end{longtable}
 \end{document}
