Inseriti sottocasi di UC11.1 con relativi req. funzionali

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -140,11 +140,11 @@ completamento del progetto:
 
 \subsection{Diagramma dei casi d'uso}
 
-\includegraphics[scale=0.7]{diagramma_use_case_1.PNG}
+%\includegraphics[scale=0.7]{diagramma_use_case_1.png}
 
-\includegraphics[scale=0.60]{diagramma_use_case_2.PNG}
+%\includegraphics[scale=0.60]{diagramma_use_case_2.png}
 
-\includegraphics[scale=0.7]{diagramma_use_case_3.PNG}
+%\includegraphics[scale=0.7]{diagramma_use_case_3.png}
 
 \includegraphics[scale=0.7]{diagramma_use_case_4.png}
 
