--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -24,6 +24,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.3}{26/04/2023}{Erica Cavaliere}{Brotto Romina}{Inserimento interruzioni di pagina e completamento grafico di Gantt}
 \addversione{0.0.4}{16/05/2023}{Erica Cavaliere}{Lorenzo Salami}{Inserimento degli sprint e aggiornamento dei grafici di Gantt}
 \addversione{0.0.5}{25/05/2023}{Nicolas Alberti}{Erica Cavaliere}{Inserimento dello sprint 4; aggiornamento dei grafici di Gantt}
+\addversione{0.0.6}{02/06/2023}{Brotto Romina}{}{Completamento sprint 5}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -221,11 +222,14 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
-    \item (da definire)
+    \item Incontro con il professor Cardin per discutere di alcuni dubbi sugli use case;
+    \item Avanzamento del \textit{Proof of Concept};
+    \item Aggiornamento dell'analisi dei requisiti.
 \end{itemize}
 \textbf{Difficoltà incontrate:}
 \begin{itemize}
-    \item (da definire)
+    \item Alcune difficoltà nella precisa defiizione di alcuni sottocasi negli use case;
+    \item Difficoltà nella comprensione del funzionamento di \textit{typescript} soprattutto nel dialogo tra client e server.
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_4.png}\newline
 \newline
@@ -233,19 +237,19 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
     \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
     \hline
-    Erica & & & 0 & & & & 0(+0)\\
+    Erica & 1 & & 2 & & & & 9(+3)\\
     \hline
-    Francesco & & & & & & 0 & 0(+0)\\
+    Francesco & & & & & & 1 & 7(+1)\\
     \hline
-    Lorenzo & 0 & & & & & & 0(+0)\\
+    Lorenzo & & & & & & 1 & 7(+1)\\
     \hline
-    Matteo & & & & & 0 & & 0(+0)\\
+    Matteo & & & & & 2 & & 11(+2)\\
     \hline
-    Nicolas & & 0 & & & & & 0(+0)\\
+    Nicolas & & & & & 2 & & 10.30(+2)\\
     \hline
-    Romina & & & 0 & & & & 0(+0)\\
+    Romina & & & 2 & & & & 8(+2)\\
     \hline
-    \textbf{Totale} & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0)\\
+    \textbf{Totale} & 9(+1) & 13.30(+0) & 18(+4) & 0(+0) & 4(+4) & 8(+2) & 51(+10)\\
     \hline
 \end{tabular}\\[8pt]
 
