Aggiunto revisore al verbale del 29/05

--- a/docs/interni/verbali/2023_05_29_I/2023_05_29_I.tex
+++ b/docs/interni/verbali/2023_05_29_I/2023_05_29_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 29/05/2023}
 \setredattori{Salami Lorenzo}
-\setrevisori{}
+\setrevisori{Alberti Nicolas}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 29/05/2023
@@ -24,7 +24,6 @@
     \item Piattaforma: Discord
     \item Partecipanti
     \begin{itemize}
-        \item Alberti Nicolas
         \item Brotto Romina
         \item Cavaliere Erica
         \item Ceccato Francesco
