Revisione verbale e correzione typo

--- a/docs/interni/verbali/2023_06_05_I/2023_06_05_I.tex
+++ b/docs/interni/verbali/2023_06_05_I/2023_06_05_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 05/06/2023}
 \setredattori{Brotto Romina}
-\setrevisori{ }
+\setrevisori{Cavaliere Erica}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 05/06/2023
@@ -47,8 +47,8 @@ Durante la riunione sono state discusse le modifiche da apportare al \textit{Pro
 
 \section*{Impegni Assunti}
 \begin{itemize}
-    \item Erica si occuperà dei aggiornae il Piano di Progetto con il nuovo sprint;
-    \item Francesco e Lorenzo si occuperanno di completare il glossario con i concetti mancanti;
+    \item Erica si occuperà di aggiornare il \textit{Piano di Progetto} con il nuovo sprint;
+    \item Francesco e Lorenzo si occuperanno di completare il \textit{Glossario} con i concetti mancanti;
     \item Romina si occuperà di redigere il verbale interno della settimana corrente;
     \item Aggiornamento del diario di bordo.
 \end{itemize}
