--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -8,7 +8,7 @@
 \settitolo{Glossario}
 \setprogetto{Lumos Minima}
 \setcommittenti{Imola Informatica}
-\setredattori{Alberti Nicolas \\ Cavaliere Erica \\ Soldà Matteo}
+\setredattori{Alberti Nicolas \\ Cavaliere Erica \\ Soldà Matteo \\ Salami Lorenzo}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento riporta i termini specifici del dominio per i quali viene richiesta una definizione rigorosa e univoca.
@@ -17,6 +17,7 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{0.0.1}{03/05/2023}{Nicolas Alberti}{Soldà Matteo}{Aggiunta parole al glossario, lettera T.}
 \addversione{0.0.2}{10/05/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunti nuovi vocaboli derivanti da \textit{Motivazione delle Scelte} e anche da \textit{Norme di Progetto}}
 \addversione{0.0.3}{30/05/2023}{Cavaliere Erica}{Alberti Nicolas}{Aggiunti nuovi vocaboli derivanti dall'\textit{Analisi dei requisiti}}
+\addversione{0.0.4}{09/06/2023}{Salami Lorenzo}{Ceccato Francesco}{Aggiunti nuovi vocaboli derivanti dall'\textit{Analisi dei requisiti}}
 
 \begin{document}
 \makeindexdetails
@@ -27,22 +28,25 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \makecontentsdetails{Glossario}
 
 \section{A.}
-\textbf{Area illuminata:} un luogo composto da \textit{impianti luminosi\textsubscript{G}} e sensori.
+\textbf{Area illuminata:} un luogo composto da un insieme di un numero arbitrario di \textit{impianti luminosi\textsubscript{G}} e sensori.
 
 \newpage
 \section{B.}
-\textbf{Blocco di Codice:} gruppo di istruzioni che devono essere eseguite in ordine. \\ 
+\textbf{Back-end:} parte di un sistema software che elabora i dati generati dal \textit{front-end\textsubscript{G}}. \\ \\
+\textbf{Blocco di Codice:} gruppo di istruzioni che devono essere eseguite in ordine. \\ \\
 \textbf{Branch:} in \textit{GitHub\textsubscript{G}} è un ambiente isolato della
 \textit{repository\textsubscript{G}} che permette di duplicare il codice
 sorgente e modificarne alcune parti, apportando modifiche che non intaccano il codice principale del progetto. \\ \\
 
 \newpage
 \section{D.}
+\textbf{Dashboard:} pannello di visualizzazione dei dati che fornisce una panoramica in tempo reale delle prestazioni e delle metriche di un progetto, servizio o specifica risorsa. \\ \\
 \textbf{Diagramma di Gantt:} strumento di supporto alla gestione dei progetti. Esso presenta l'arco temporale del progetto suddiviso in fasi incrementali e le mansioni che rappresentano il progetto stesso. \\
 
 \newpage
 \section{F.}
 \textbf{Fornitura:} ciascuna delle serie di prodotti necessari al completamento, al funzionamento o all'efficienza di qualcosa. \\ \\
+\textbf{Front-end:} parte di un sistema software che gestisce l'interazione con l'utente o con sistemi esterni. \\ \\
 \textbf{Full-stack:} insieme di un sistema o di applicazione informatica, comprendente sia il frontend che il backend.\\ \\
 
 \newpage
@@ -67,6 +71,10 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 \textbf{Interfaccia:} dispositivo di collegamento con cui un software assicura la comunicazione tra due sistemi altrimenti incompatibili, oppure tra unità centrali e periferiche. \\ \\
 
 \newpage
+\section{L.}
+\textbf{Landing Page:}: pagina web che ha il compito di accogliere l'utente che vi arriva, fornendogli informazioni e aiutandolo a trovare ciò che cerca. \\ \\
+
+\newpage
 \section{M.}
 \textbf{Multithreading:} tecnicna utilizzata nella programmazione per consentire a un singolo processo di avere più \textit{thread\textsubscript{G}} di esecuzione. Ogni thread può funzionare in modo indipendente e parallelo, consentendo un uso più efficiente delle risorse. Ciò può aiutare a migliorare le prestazioni complessive di un programma e renderlo più sensibile all'input di un utente. \\ \\
 
@@ -75,12 +83,14 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 \textbf{Piano di Progetto:} calendario di massima di un progetto riportante la stima dei costi di realizzazione, dei rischi attesi e della loro mitigazione e infine della suddivisione del lavoro in molteplici periodi successivi. Per ogni periodo devono essere riportati i seguenti elementi: obiettivi attesi, obiettivi raggiunti, rischi occorsi, conseguenze e mitigazione, costi osservati e aggiornamento del calendario futuro e della stima dei costi finali. \\ \\
 \textbf{Piano di Qualifica:} specifica gli obiettivi quantitativi di qualità di prodotto e di processo, oltre a misurare il raggiungimento di tali obiettivi allo stato corrente pone le fondamenta per retrospettive e iniziative di auto-miglioramento. \\ \\
 \textbf{Processo:} insieme di attività correlate e coese che trasformano bisogni (input) in prodotti (output) secondo regole date, utilizzando risorse nel farlo. \\ \\
+\textbf{Push/Pull:} In ambito web application, il push si riferisce alla comunicazione in cui il server invia attivamente i dati o gli aggiornamenti al client senza che vengano richiesti esplicitamente. Il pull, invece, implica che il client richieda esplicitamente i dati o gli aggiornamenti al server quando ne ha bisogno. Il push è utilizzato per aggiornamenti in tempo reale, mentre il pull viene utilizzato per richieste specifiche del client. \\ \\
 
 \newpage
 \section{R.}
 \textbf{Repository:} è una cartella remota che permette il salvataggio dei file
 di progetto ed utilizza un sistema di controllo di versione. Quando
 viene nominato, ci si riferisce al repository \textit{GitHub\textsubscript{G}} reperibile all’indirizzo \texttt{https://github.com/4ourSquared/LumosMinima}.  \\ \\
+\textbf{Responsive:}Detto di sito web in grado di adattarsi graficamente in maniera automatica a qualsiasi dispositivo su cui viene visualizzato. \\ \\
 
 \newpage
 \section{S.}
@@ -104,8 +114,7 @@ efficace di ogni incarico effettuato dai membri del gruppo. \\ \\
 \newpage
 \section{W.}
 \textbf{Way of Working:} rappresenta il come organizzare in maniera professionale le attività di progetto.\\ \\
-\textbf{Web Application:} indica generalmente tutte le applicazioni fruibili
-tramite il web.
+\textbf{Web Application:} indica generalmente tutte le applicazioni fruibili tramite il web.
 
 
 
