--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -24,7 +24,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.4}{16/05/2023}{Cavaliere Erica}{Salami Lorenzo}{Inserimento degli sprint e aggiornamento dei grafici di Gantt}
 \addversione{0.0.5}{25/05/2023}{Alberti Nicolas}{Cavaliere Erica}{Inserimento dello sprint 4; aggiornamento dei grafici di Gantt}
 \addversione{0.0.6}{02/06/2023}{Brotto Romina}{Soldà Matteo}{Completamento sprint 5}
-\addversione{0.0.7}{07/06/2023}{Cavaliere Erica}{}{}
+\addversione{0.0.7}{11/06/2023}{Cavaliere Erica}{}{Completamento sprint 6}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -249,13 +249,13 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
     Romina & & & 2 & & & & 8(+2)\\
     \hline
-    \textbf{Totale} & 9(+1) & 13.30(+0) & 18(+4) & 0(+0) & 4(+4) & 8(+2) & 51(+10)\\
+    \textbf{Totale} & 9(+1) & 13.30(+0) & 18(+4) & 0(+0) & 4(+4) & 8(+2) & 52.30(+11)\\
     \hline
 \end{tabular}\\[8pt]
 
 \subsubsection{Sprint 6}
 \textbf{Data di inizio:} 03/06/2023\newline
-\textbf{Data di fine:} 10/06/2023\newline
+\textbf{Data di fine:} 12/06/2023\newline
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
@@ -273,19 +273,19 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
     \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
     \hline
-    Erica & & & & & & 0 & (+)\\
+    Erica & & & & & & 2 & 11(+2)\\
     \hline
-    Francesco & & & 0 & & & & (+)\\
+    Francesco & & & 2 & & & & 9(+2)\\
     \hline
-    Lorenzo & & & 0 & & & & (+)\\
+    Lorenzo & & & 2 & & & & 9(+2)\\
     \hline
-    Matteo & & & & & 0 & & (+)\\
+    Matteo & & & & & 3 & & 14(+3)\\
     \hline
-    Nicolas & & & & & 0 & & (+)\\
+    Nicolas & & 0.30 & & & 2 & & 13(+2.30)\\
     \hline
-    Romina & 0 & & & & & & (+)\\
+    Romina & 2 & & & & & & 10(+2)\\
     \hline
-    \textbf{Totale} & (+) & (+) & (+) & (+) & (+) & (+) & (+)\\
+    \textbf{Totale} & 11(+2) & 14(+0.30) & 22(+4) & 0(+0) & 10(+6) & 11(+2) & 66(+13.30)\\
     \hline
 \end{tabular}\\[8pt]
 
