Aggiunta immagine Gantt Sprint 7; ancora da completare con le ore precise

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -60,7 +60,7 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \item Way of Working\newline
     \includegraphics[scale=0.24]{WoW_2.png}\newline
     \item Requirements and Technology Baseline\newline
-    \includegraphics[scale=0.24]{RTB_5.png}\newline
+    \includegraphics[scale=0.24]{RTB_6.png}\newline
 \end{itemize}
 
 \subsection{Scrum}\label{Scrum}
@@ -268,6 +268,41 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \item Eseguire il \textit{Proof of Concept} nella macchina locale di ogni componente del gruppo, dovuto alla mancanza di alcuni pacchetti fondamentali per l'esecuzione del codice.
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_5.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & & & & & 2 & 11(+2)\\
+    \hline
+    Francesco & & & 2 & & & & 9(+2)\\
+    \hline
+    Lorenzo & & & 2 & & & & 9(+2)\\
+    \hline
+    Matteo & & & & & 3 & & 14(+3)\\
+    \hline
+    Nicolas & & 0.30 & & & 2 & & 13(+2.30)\\
+    \hline
+    Romina & 2 & & & & & & 10(+2)\\
+    \hline
+    \textbf{Totale} & 11(+2) & 14(+0.30) & 22(+4) & 0(+0) & 10(+6) & 11(+2) & 66(+13.30)\\
+    \hline
+\end{tabular}\\[8pt]
+
+\subsubsection{Sprint 7}
+\textbf{Data di inizio:} 13/06/2023\newline
+\textbf{Data di fine:} 19/06/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item Avanzamento dello sviluppo del \textit{Proof of Concept}.
+\end{itemize}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item Eseguire correttamente il codice all'interno di un \textit{container Docker};
+    \item Integrazione del database \textit{MongoDB} con il codice presente.
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_6.png}\newline
 \newline
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
     \hline
