--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -25,6 +25,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.5}{25/05/2023}{Alberti Nicolas}{Cavaliere Erica}{Inserimento dello sprint 4; aggiornamento dei grafici di Gantt}
 \addversione{0.0.6}{02/06/2023}{Brotto Romina}{Soldà Matteo}{Completamento sprint 5}
 \addversione{0.0.7}{11/06/2023}{Cavaliere Erica}{Soldà Matteo}{Completamento sprint 6}
+\addversione{0.0.8}{23/06/2023}{Alberti Nicolas}{Cavaliere Erica}{Completamento sprint 7}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -308,19 +309,19 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
     \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
     \hline
-    Erica & & & & & & 2 & 11(+2)\\
+    Erica & & & & & 2 & & 13(+2)\\
     \hline
-    Francesco & & & 2 & & & & 9(+2)\\
+    Francesco & & & & 2 & & & 11(+2)\\
     \hline
-    Lorenzo & & & 2 & & & & 9(+2)\\
+    Lorenzo & 1 & & & & & & 10(+1)\\
     \hline
-    Matteo & & & & & 3 & & 14(+3)\\
+    Matteo & & & & 1 & & & 15(+1)\\
     \hline
-    Nicolas & & 0.30 & & & 2 & & 13(+2.30)\\
+    Nicolas & & & 2 & & & & 15(+2)\\
     \hline
-    Romina & 2 & & & & & & 10(+2)\\
+    Romina & & 1 & & & & & 11(+1)\\
     \hline
-    \textbf{Totale} & 11(+2) & 14(+0.30) & 22(+4) & 0(+0) & 10(+6) & 11(+2) & 66(+13.30)\\
+    \textbf{Totale} & 12(+1) & 15(+1) & 24(+2) & 3(+3) & 12(+2) & 11(+0) & 75(+9)\\
     \hline
 \end{tabular}\\[8pt]
 
