--- a/docs/interni/verbali/2023_06_30_I/2023_06_30_I.tex
+++ b/docs/interni/verbali/2023_06_30_I/2023_06_30_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 30/06/2023}
 \setredattori{Cavaliere Erica}
-\setrevisori{}
+\setrevisori{Salami Lorenzo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 30/06/2023
@@ -25,6 +25,7 @@
     \item Partecipanti
     \begin{itemize}
         \item Alberti Nicolas
+        \item Brotto Romina
         \item Cavaliere Erica
         \item Ceccato Francesco
         \item Salami Lorenzo
