--- a/docs/interni/verbali/2023_06_30_I/2023_06_30_I.tex
+++ b/docs/interni/verbali/2023_06_30_I/2023_06_30_I.tex
@@ -57,7 +57,7 @@ Sono state create delle issue per avere una idea di come dovrà procedere il lav
     \item Erica, Francesco e Romina si occuperanno di aggiornare l'\textit{Analisi dei Requisiti}, considerando i consigli che il proponente aveva dato in precedenza;
     \item Matteo si occuperà di aggiornare il \textit{Piano di progetto} aggiungendo lo Sprint 8;
     \item Francesco si occuperà della creazione della pagina di Login nel \textit{Proof of Concept};
-    \item Nicolas e Mattero gestiranno l'implementazione tra server e database nel \textit{Proof of Concept};
-    \item Lorenzo si ocuperà di aggiornare la gestione dell'area illuminata;
+    \item Nicolas e Matteo gestiranno l'implementazione tra server e database nel \textit{Proof of Concept};
+    \item Lorenzo, Erica, Romina e Nicolas si occuperanno di aggiornare la gestione dell'area illuminata;
 \end{itemize}
 \end{document}
