Sistemato typo a pagina 3

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -117,7 +117,7 @@ Il proponente non impone particolari vincoli nella scelta delle tecnologie e dei
 \end{itemize}
 
 Per il completamento del progetto il proponente richiede che siano ottenuti i
-seguienti risultati:
+seguenti risultati:
 \begin{itemize}
     \item applicazione Web Responsive che soddisfi i requisiti obblgatori
     illustrati dai casi d'uso;
